<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/menu_publicaciones">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_recientes"
                        android:icon="@drawable/ic_menu_recent"
                        android:title="@string/nav_recientes"/>
                    <item
                        android:id="@+id/nav_votadas"
                        android:icon="@drawable/ic_menu_votadas"
                        android:title="@string/nav_votadas"/>
                    <item
                        android:id="@+id/nav_scan"
                        android:icon="@drawable/ic_menu_scan"
                        android:title="@string/nav_scan"/>
                </group>
            </menu>
        </item>
        <item android:title="@string/menu_cuenta">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_perfil"
                        android:icon="@drawable/ic_menu_perfil"
                        android:title="@string/nav_perfil"/>
                    <item
                        android:id="nav_publicaciones"
                        android:icon="@drawable/ic_menu_publicaciones"
                        android:title="@string/nav_publicaciones"/>
                </group>
            </menu>
        </item>
    </group>
</menu>