<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_recientes">

    <fragment
        android:id="@+id/nav_recientes"
        android:name="senasoft2020.buhmed.ui.recientes.RecientesFragment"
        android:label="@string/nav_recientes"
        tools:layout="@layout/fragment_recientes" />

    <fragment
        android:id="@+id/nav_votadas"
        android:name="senasoft2020.buhmed.ui.votadas.VotadasFragment"
        android:label="@string/nav_votadas"
        tools:layout="@layout/fragment_votadas" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="senasoft2020.buhmed.ui.profile.ProfileFragment"
        android:label="@string/nav_perfil"
        tools:layout="@layout/fragment_profile"/>
</navigation>